Fixed spacing on player views pick a card info modal box - there was too much spacing before the button on Firefox

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -440,7 +440,6 @@
 
 .cardstories .cardstories_modal_button {
     position: relative;
-    top: 0.25em;
     margin: 0 auto;
     font-size: 2.4em; 
     width: 6.5em;
